--- a/Repte2.ipynb
+++ b/Repte2.ipynb
@@ -56,6 +56,8 @@
     "\n",
     "class TestNotebook(unittest.TestCase):\n",
     "    \n",
+    "    def test_correcte(self):\n",
+    "        self.assertEqual(verifyEmail(\"hello@hello.com\"),True)\n",
     "    def test_arrobaandpoint(self):\n",
     "        self.assertEqual(verifyEmail(\"hello\"),False)\n",
     "    def test_arrobaandpoint2(self):\n",
