--- a/Repte2.ipynb
+++ b/Repte2.ipynb
@@ -19,11 +19,14 @@
     "<h3>Objectiu</h3>\n",
     "<p>Hem de crear una funció de nom <b>verifyEmail()</b> on rebrà un paràmetre <b>s</b> que seà una cadena, corresponent al correu electrònic.</p>\n",
     "<h3>Normes</h3>\n",
-    "<p>Aquesta funció haurà de comprovar les següents normes:</p>\n",
+    "<p>Aquesta funció haurà de retornar True si es compleixen les següents normes:</p>\n",
     "<ol><li>L'adreça haurà de contenir el caràcter \"@\" i el punt \".\". A més no podrà contenir cap espai</li>\n",
+    "    <li>L'adreça no pot tenir 2 caràcters \"@\" ni 2 caràcters \".\"</li>\n",
+    "    <li>El caràcter \".\" ha d'estar desp´res del caràcter \"@\"</li>\n",
     "<li>El nom de l'adreça electrònica ( a l'esquerra del caràcter \"@\") ha de ser de igual o més de 3 caràcters</li>\n",
     "<li>El servidor de l'adreça electrònica ( a la dreta del caràcter \"@\") ha de ser de igual o més de 3 caràcters</li>\n",
     "<li>El domini de l'adreça electrònica ( a la dreta del caràcter \".\") ha de ser de 2 o  3 caràcters</li></ol>\n",
+    "<p>Si no es compleixen haurà de retornar False</p>\n",
     "<h3>Premi</h3>\n",
     "<p>Si supereu el test rebreu 500 punts a la plataforma</p>"
    ]
@@ -60,6 +63,12 @@
     "        self.assertEqual(verifyEmail(\"hello@hello.com\"),True)\n",
     "    def test_arrobaandpoint(self):\n",
     "        self.assertEqual(verifyEmail(\"hello\"),False)\n",
+    "    def test_double_point(self):\n",
+    "        self.assertEqual(verifyEmail(\"hello.hello.es\"),False)\n",
+    "    def test_double_arroba(self):\n",
+    "        self.assertEqual(verifyEmail(\"hello@hello@es\"),False)\n",
+    "    def test_point_before_arroba(self):\n",
+    "        self.assertEqual(verifyEmail(\"hello.hello@es\"),False)\n",
     "    def test_arrobaandpoint2(self):\n",
     "        self.assertEqual(verifyEmail(\"hello@hello\"),False)\n",
     "    def test_lenname(self):\n",
