--- a/Repte2.ipynb
+++ b/Repte2.ipynb
@@ -22,7 +22,7 @@
     "<p>Aquesta funció haurà de retornar True si es compleixen les següents normes:</p>\n",
     "<ol><li>L'adreça haurà de contenir el caràcter \"@\" i el punt \".\". A més no podrà contenir cap espai</li>\n",
     "    <li>L'adreça no pot tenir 2 caràcters \"@\" ni 2 caràcters \".\"</li>\n",
-    "    <li>El caràcter \".\" ha d'estar desp´res del caràcter \"@\"</li>\n",
+    "    <li>El caràcter \".\" ha d'estar després del caràcter \"@\"</li>\n",
     "<li>El nom de l'adreça electrònica ( a l'esquerra del caràcter \"@\") ha de ser de igual o més de 3 caràcters</li>\n",
     "<li>El servidor de l'adreça electrònica ( a la dreta del caràcter \"@\") ha de ser de igual o més de 3 caràcters</li>\n",
     "<li>El domini de l'adreça electrònica ( a la dreta del caràcter \".\") ha de ser de 2 o  3 caràcters</li></ol>\n",
